--- a/測試/crewAI + gemini.ipynb
+++ b/測試/crewAI + gemini.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,15 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GPT35 = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.7),\n",
-    "GPT4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
-    "Ollama = Ollama(model=\"openhermes\"),\n",
-    "Gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),\n",
-    "LLM = Ollama"
+    "gpt35 = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.7),\n",
+    "gpt4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
+    "ollama = Ollama(model=\"openhermes\"),\n",
+    "gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),"
    ]
   },
   {
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -173,14 +172,14 @@
        "'\\ntools=[\\n    search_DuckDuck,\\n    BrowserTools.scrape_and_summarize_website,\\n    CalculatorTools.calculate,\\n    FileTools.write_file,     \\n    SearchTools.search_internet,\\n    SearchTools.search_news,\\n    SECTools.search_10q,\\n    SECTools.search_10k,\\n    TemplateTools.learn_landing_page_options,\\n    TemplateTools.copy_landing_page_template_to_project_folder,\\n    YahooFinanceNewsTool()\\n    ]\\n'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.tools import DuckDuckGoSearchRun\n",
-    "search_DuckDuck = DuckDuckGoSearchRun()\n",
+    "search_tool = DuckDuckGoSearchRun()\n",
     "\"\"\"\n",
     "tools=[\n",
     "    search_DuckDuck,\n",
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +216,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m researcher \u001b[38;5;241m=\u001b[39m \u001b[43mAgent\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrole\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSenior Research Analyst\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUncover cutting-edge development in AI and data science\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbackstory\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43m You work in a leading tech think tank.\u001b[39;49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;43m    Your expertise lies in identifying emerging trends.\u001b[39;49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124;43m    You have a knack for dissecting complex data and presenting actionable insights.\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_delegation\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mllm\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mLLM\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtools\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43msearch_DuckDuck\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m writer \u001b[38;5;241m=\u001b[39m Agent(\n\u001b[0;32m     13\u001b[0m     role\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTech Content Strategist\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     14\u001b[0m     goal\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCraft compelling content on tech advancements\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m     tools\u001b[38;5;241m=\u001b[39m[search_DuckDuck]\n\u001b[0;32m     22\u001b[0m )\n",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m researcher \u001b[38;5;241m=\u001b[39m \u001b[43mAgent\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrole\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSenior Research Analyst\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUncover cutting-edge development in AI and data science\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbackstory\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43m You work in a leading tech think tank.\u001b[39;49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;43m    Your expertise lies in identifying emerging trends.\u001b[39;49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124;43m    You have a knack for dissecting complex data and presenting actionable insights.\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_delegation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mllm\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mollama\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtools\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43msearch_tool\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m writer \u001b[38;5;241m=\u001b[39m Agent(\n\u001b[0;32m     13\u001b[0m     role\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTech Content Strategist\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     14\u001b[0m     goal\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCraft compelling content on tech advancements\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     20\u001b[0m     llm \u001b[38;5;241m=\u001b[39m ollama\n\u001b[0;32m     21\u001b[0m )\n",
       "File \u001b[1;32md:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\pydantic\\main.py:171\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[1;34m(self, **data)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[0;32m    170\u001b[0m __tracebackhide__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 171\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mValidationError\u001b[0m: 1 validation error for Agent\n  Value error, 1 validation error for ConversationSummaryMemory\nllm\n  value is not a valid dict (type=type_error.dict) [type=value_error, input_value={'role': 'Senior Research...[DuckDuckGoSearchRun()]}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/value_error"
      ]
@@ -230,10 +229,10 @@
     "    backstory = \"\"\" You work in a leading tech think tank.\n",
     "    Your expertise lies in identifying emerging trends.\n",
     "    You have a knack for dissecting complex data and presenting actionable insights.\"\"\",\n",
-    "    verbose = True,\n",
-    "    allow_delegation = False,\n",
-    "    llm = LLM,\n",
-    "    tools=[search_DuckDuck]\n",
+    "    verbose=True,\n",
+    "    allow_delegation=False,\n",
+    "    llm = ollama,\n",
+    "    tools=[search_tool]\n",
     ")\n",
     "writer = Agent(\n",
     "    role='Tech Content Strategist',\n",
@@ -243,8 +242,7 @@
     "    You transform complex concepts into compelling narratives. And you are expert at writing in traditional chinese\"\"\",\n",
     "    verbose=True,\n",
     "    allow_delegation=True,\n",
-    "    llm = LLM,\n",
-    "    tools=[search_DuckDuck]\n",
+    "    llm = ollama\n",
     ")"
    ]
   },
@@ -257,9 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'researcher' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m task1 \u001b[38;5;241m=\u001b[39m Task(\n\u001b[0;32m      2\u001b[0m   description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mConduct a comprehensive analysis of the latest advancements in AI in 2024.\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124m  Identify key trends, breakthrough technologies, and potential industry impacts.\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124m  Your final answer MUST be a full analysis report\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m,\n\u001b[1;32m----> 5\u001b[0m   agent\u001b[38;5;241m=\u001b[39m\u001b[43mresearcher\u001b[49m\n\u001b[0;32m      6\u001b[0m )\n\u001b[0;32m      8\u001b[0m task2 \u001b[38;5;241m=\u001b[39m Task(\n\u001b[0;32m      9\u001b[0m   description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mUsing the insights provided, develop an engaging blog\u001b[39m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;124m  post that highlights the most significant AI advancements.\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     16\u001b[0m   agent\u001b[38;5;241m=\u001b[39mwriter\n\u001b[0;32m     17\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'researcher' is not defined"
+     ]
+    }
+   ],
    "source": [
     "task1 = Task(\n",
     "  description=\"\"\"Conduct a comprehensive analysis of the latest advancements in AI in 2024.\n",
