--- a/測試/crewAI + gemini.ipynb
+++ b/測試/crewAI + gemini.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,9 +25,9 @@
       "Requirement already satisfied: duckduckgo-search in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (4.4.3)\n",
       "Requirement already satisfied: langchain-google-genai in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (0.0.9)\n",
       "Requirement already satisfied: instructor<0.6.0,>=0.5.2 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (0.5.2)\n",
-      "Requirement already satisfied: langchain<0.2.0,>=0.1.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (0.1.0)\n",
+      "Requirement already satisfied: langchain<0.2.0,>=0.1.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (0.1.7)\n",
       "Requirement already satisfied: langchain-openai<0.0.3,>=0.0.2 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (0.0.2.post1)\n",
-      "Requirement already satisfied: openai<2.0.0,>=1.7.1 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (1.7.1)\n",
+      "Requirement already satisfied: openai<2.0.0,>=1.7.1 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (1.12.0)\n",
       "Requirement already satisfied: opentelemetry-api<2.0.0,>=1.22.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (1.22.0)\n",
       "Requirement already satisfied: opentelemetry-exporter-otlp-proto-http<2.0.0,>=1.22.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (1.22.0)\n",
       "Requirement already satisfied: opentelemetry-sdk<2.0.0,>=1.22.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from crewai) (1.22.0)\n",
@@ -38,7 +38,7 @@
       "Requirement already satisfied: lxml>=5.1.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (5.1.0)\n",
       "Requirement already satisfied: nest-asyncio>=1.6.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (1.6.0)\n",
       "Requirement already satisfied: google-generativeai<0.4.0,>=0.3.1 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain-google-genai) (0.3.2)\n",
-      "Requirement already satisfied: langchain-core<0.2,>=0.1 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain-google-genai) (0.1.8)\n",
+      "Requirement already satisfied: langchain-core<0.2,>=0.1 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain-google-genai) (0.1.23)\n",
       "Requirement already satisfied: colorama in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from click>=8.1.7->duckduckgo-search) (0.4.6)\n",
       "Requirement already satisfied: cffi>=1.12.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (1.16.0)\n",
       "Requirement already satisfied: certifi in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (2024.2.2)\n",
@@ -58,8 +58,8 @@
       "Requirement already satisfied: SQLAlchemy<3,>=1.4 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (2.0.27)\n",
       "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (0.6.4)\n",
       "Requirement already satisfied: jsonpatch<2.0,>=1.33 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (1.33)\n",
-      "Requirement already satisfied: langchain-community<0.1,>=0.0.9 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (0.0.10)\n",
-      "Requirement already satisfied: langsmith<0.1.0,>=0.0.77 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (0.0.87)\n",
+      "Requirement already satisfied: langchain-community<0.1,>=0.0.20 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (0.0.20)\n",
+      "Requirement already satisfied: langsmith<0.1,>=0.0.83 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (0.0.87)\n",
       "Requirement already satisfied: numpy<2,>=1 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (1.26.4)\n",
       "Requirement already satisfied: requests<3,>=2 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain<0.2.0,>=0.1.0->crewai) (2.31.0)\n",
       "Requirement already satisfied: anyio<5,>=3 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from langchain-core<0.2,>=0.1->langchain-google-genai) (4.2.0)\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
     "gpt4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
     "ollama_llm = Ollama(model=\"openhermes\"),\n",
     "# gemini 突然變成無法執行了，哀\n",
-    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),"
+    "gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),"
    ]
   },
   {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "'\\ntools=[\\n    search_DuckDuck,\\n    BrowserTools.scrape_and_summarize_website,\\n    CalculatorTools.calculate,\\n    FileTools.write_file,     \\n    SearchTools.search_internet,\\n    SearchTools.search_news,\\n    SECTools.search_10q,\\n    SECTools.search_10k,\\n    TemplateTools.learn_landing_page_options,\\n    TemplateTools.copy_landing_page_template_to_project_folder,\\n    YahooFinanceNewsTool()\\n    ]\\n'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m researcher \u001b[38;5;241m=\u001b[39m \u001b[43mAgent\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrole\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSenior Research Analyst\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUncover cutting-edge development in AI and data science\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbackstory\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43m You work in a leading tech think tank.\u001b[39;49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;43m    Your expertise lies in identifying emerging trends.\u001b[39;49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124;43m    You have a knack for dissecting complex data and presenting actionable insights.\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_delegation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mllm\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mollama_llm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# tools = [search_tool]\u001b[39;49;00m\n\u001b[0;32m     11\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m writer \u001b[38;5;241m=\u001b[39m Agent(\n\u001b[0;32m     13\u001b[0m     role\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTech Content Strategist\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     14\u001b[0m     goal\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCraft compelling content on tech advancements\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     20\u001b[0m     llm \u001b[38;5;241m=\u001b[39m ollama_llm\n\u001b[0;32m     21\u001b[0m )\n",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m researcher \u001b[38;5;241m=\u001b[39m \u001b[43mAgent\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrole\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSenior Research Analyst\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgoal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUncover cutting-edge development in AI and data science\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbackstory\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43m You work in a leading tech think tank.\u001b[39;49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;43m    Your expertise lies in identifying emerging trends.\u001b[39;49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124;43m    You have a knack for dissecting complex data and presenting actionable insights.\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_delegation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mllm\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mollama_llm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# tools = [search_tool]\u001b[39;49;00m\n\u001b[0;32m     11\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m writer \u001b[38;5;241m=\u001b[39m Agent(\n\u001b[0;32m     13\u001b[0m     role\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTech Content Strategist\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     14\u001b[0m     goal\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCraft compelling content on tech advancements\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     20\u001b[0m     llm \u001b[38;5;241m=\u001b[39m ollama_llm\n\u001b[0;32m     21\u001b[0m )\n",
       "File \u001b[1;32md:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\pydantic\\main.py:171\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[1;34m(self, **data)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[0;32m    170\u001b[0m __tracebackhide__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 171\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mValidationError\u001b[0m: 1 validation error for Agent\n  Value error, 1 validation error for ConversationSummaryMemory\nllm\n  value is not a valid dict (type=type_error.dict) [type=value_error, input_value={'role': 'Senior Research...a(model='openhermes'),)}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/value_error"
      ]
