--- a/測試/demo.ipynb
+++ b/測試/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,10 @@
       "  Your final answer MUST be a full analysis report\n",
       "\n",
       "\n",
-      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n"
+      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m Thought: Do I need to use a tool? Yes\n",
+      "Action: duckduckgo_search\n",
+      "Action Input: \"Latest advancements in AI 2024\" \"AI trends 2024\" \"Breakthrough technologies in AI 2024\" \"Impacts of AI on industries 2024\"\u001b[0m"
      ]
     }
    ],
