--- a/測試/demo.ipynb
+++ b/測試/demo.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "d:\\TOMO.Project\\crewAI\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -71,15 +71,22 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: duckduckgo-search in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (4.4.3)\n",
-      "Requirement already satisfied: click>=8.1.7 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (8.1.7)\n",
-      "Requirement already satisfied: curl-cffi>=0.6.0b9 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (0.6.0b9)\n",
       "Requirement already satisfied: lxml>=5.1.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (5.1.0)\n",
+      "Requirement already satisfied: click>=8.1.7 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (8.1.7)\n",
       "Requirement already satisfied: nest-asyncio>=1.6.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (1.6.0)\n",
+      "Requirement already satisfied: curl-cffi>=0.6.0b9 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (0.6.0b9)\n",
       "Requirement already satisfied: colorama in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from click>=8.1.7->duckduckgo-search) (0.4.6)\n",
       "Requirement already satisfied: cffi>=1.12.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (1.16.0)\n",
       "Requirement already satisfied: certifi in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (2024.2.2)\n",
       "Requirement already satisfied: pycparser in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from cffi>=1.12.0->curl-cffi>=0.6.0b9->duckduckgo-search) (2.21)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
      ]
     }
    ],
@@ -174,13 +181,18 @@
       "[DEBUG]: Working Agent: Senior Research Analyst\n",
       "[INFO]: Starting Task: Conduct a comprehensive analysis of the latest advancements in AI in 2024.\n",
       "  Identify key trends, breakthrough technologies, and potential industry impacts.\n",
-      "  Your final answer MUST be a full analysis report\n",
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new CrewAgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3m Thought: Do I need to use a tool? Yes\n",
-      "Action: duckduckgo_search\n",
-      "Action Input: \"Latest advancements in AI 2024\" \"AI trends 2024\" \"Breakthrough technologies in AI 2024\" \"Impacts of AI on industries 2024\"\u001b[0m"
+      "  Your final answer MUST be a full analysis report\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在目前儲存格或上一個儲存格中執行程式碼時，Kernel 已損毀。\n",
+      "\u001b[1;31m請檢閱儲存格中的程式碼，找出失敗的可能原因。\n",
+      "\u001b[1;31m如需詳細資訊，請按一下<a href='https://aka.ms/vscodeJupyterKernelCrash'>這裡</a>。\n",
+      "\u001b[1;31m如需詳細資料，請檢視 Jupyter <a href='command:jupyter.viewOutput'>記錄</a>。"
      ]
     }
    ],
@@ -209,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
