--- a/測試/demo.ipynb
+++ b/測試/demo.ipynb
@@ -4,20 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\TOMO.Project\\crewAI\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from crewai import Agent, Task, Crew, Process\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "# from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langchain_community.llms import OpenAI, Ollama\n",
     "from langchain_openai import ChatOpenAI"
    ]
@@ -58,7 +49,8 @@
     "gpt35 = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.7),\n",
     "gpt4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
     "ollama = Ollama(model=\"mistral\") \n",
-    "gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),"
+    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),\n",
+    "# gemini = ChatGoogleGenerativeAI(model = \"gemini-1.0-pro\", verbose = True, temperature = 0.6, google_api_key = os.environ[\"GOOGLE_API_KEY\"]),"
    ]
   },
   {
@@ -71,10 +63,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: duckduckgo-search in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (4.4.3)\n",
-      "Requirement already satisfied: lxml>=5.1.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (5.1.0)\n",
-      "Requirement already satisfied: click>=8.1.7 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (8.1.7)\n",
       "Requirement already satisfied: nest-asyncio>=1.6.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (1.6.0)\n",
+      "Requirement already satisfied: click>=8.1.7 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (8.1.7)\n",
       "Requirement already satisfied: curl-cffi>=0.6.0b9 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (0.6.0b9)\n",
+      "Requirement already satisfied: lxml>=5.1.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from duckduckgo-search) (5.1.0)\n",
       "Requirement already satisfied: colorama in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from click>=8.1.7->duckduckgo-search) (0.4.6)\n",
       "Requirement already satisfied: cffi>=1.12.0 in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (1.16.0)\n",
       "Requirement already satisfied: certifi in d:\\tomo.project\\crewai\\venv\\lib\\site-packages (from curl-cffi>=0.6.0b9->duckduckgo-search) (2024.2.2)\n",
@@ -129,9 +121,9 @@
     "  backstory=\"\"\"You are a renowned Content Strategist, known for\n",
     "  your insightful and engaging articles.\n",
     "  You transform complex concepts into compelling narratives. 你專長以繁體中文寫作文章\"\"\",\n",
-    "  verbose=True,\n",
-    "  allow_delegation=True,\n",
-    "  llm = ollama\n",
+    "  llm = ollama,\n",
+    "  # verbose=True,\n",
+    "  # allow_delegation=True,\n",
     "  # (optional) llm=ollama_llm\n",
     ")\n",
     "\n",
